--- a/plantillas/listaIntegrantes.html
+++ b/plantillas/listaIntegrantes.html
@@ -14,6 +14,12 @@
                     <th scope="col">Matricula</th>
                     <th scope="col">Nombre</th>
                     <th scope="col">Edad</th>
+                    <th scope="col">APaterno</th>
+                    <th scope="col">AMaterno</th>
+                    <th scope="col">Correo</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Carrera</th>
+
                 </tr>
                 </thead>
                 <tbody>
@@ -32,6 +38,12 @@
                         <td><input type="number" name="f_matricula" class="form-control" required></td>
                         <td><input type="text" name="f_nombre" class="form-control" required></td>
                         <td><input type="number" name="f_edad" class="form-control" required></td>
+                        <td><input type="text" name="f_APaterno" class="form-control" required></td>
+                        <td><input type="text" name="f_AMaterno" class="form-control" required></td>
+                        <td><input type="text" name="f_correo" class="form-control" required></td>
+                        <td><input type="number" name="f_telefono" class="form-control" required></td>
+                        <td><input type="text" name="f_carrera" class="form-control" required></td>
+
                         <td style="text-align: center;"><button class="btn btn-primary" type="submit">Agregar</button></td>
                         </form>
                     </tr>
