--- a/plantillas/listaIntegrantes.html
+++ b/plantillas/listaIntegrantes.html
@@ -1,13 +1,17 @@
 <html>
     <head>
         <title>integrantes</title>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
+        <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
         <link href="{{ url_for('mirecurso', path='/bootstrap.min.css') }}" rel="stylesheet">
         <script src="{{ url_for('mirecurso', path='/bootstrap.bundle.min.js') }}"></script>
     </head>
     <body>
         <div ><h1 style="text-align: center;">Lista de integrantes</h1></div>
         <div>
-            <table class="table table-striped">
+            <table id="grid" class="table table-striped">
                 <thead>
                 <tr>
                     <th scope="col">item_id</th>
@@ -19,6 +23,8 @@
                     <th scope="col">Correo</th>
                     <th scope="col">Telefono</th>
                     <th scope="col">Carrera</th>
+                    <th scope="col">Editar</th>
+                    <th scope="col">Eliminar</th>
 
                 </tr>
                 </thead>
@@ -34,6 +40,7 @@
                         </tr>
                     {% endfor %}
                     <tr scope="row">
+                        <td>Resultados</td>
                         <form method="POST" action="{{'/actualizar' if alumno else '/agregar'}}">
                         <td> 
                             {% if alumno %}
@@ -57,5 +64,10 @@
                 </tbody>
             </table>
         </div>
+        <script>
+                       $(document).ready(function () {
+                $('#grid').DataTable();
+            });
+        </script>
     </body>
 </html>
